# markitdown-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  README.md
benches/: conversion.rs
docs/: ARCHITECTURE.md  FORMATS.md  FORMAT_COVERAGE.md  README.md  TESTING.md
examples/: llm_usage.rs  openrouter_pdf.rs
src/: archive.rs  bibtex.rs  calendar.rs  csv.rs  data.rs  docbook.rs  docx.rs  email.rs  epub.rs  error.rs  excel.rs  fictionbook.rs  html.rs  image.rs  iwork.rs  jupyter.rs  latex.rs  legacy_office.rs  lib.rs  llm.rs  log.rs  main.rs  markdown.rs  model.rs  opendocument.rs  opml.rs  orgmode.rs  pdf.rs  pptx.rs  prompts.rs  rss.rs  rst.rs  rtf.rs  sqlite.rs  table_merge.rs  typst.rs  vcard.rs
tests/: archive.rs  bibtex_log.rs  csv.rs  docbook.rs  docx.rs  email.rs  epub.rs  excel.rs  fictionbook.rs  html.rs  image.rs  json.rs  jupyter.rs  latex.rs  legacy_office.rs  llm.rs  markdown.rs  opendocument.rs  opml.rs  orgmode.rs  pdf.rs  pptx.rs  rss.rs  rst.rs  table_merge.rs  test_documents.md  text.rs  typst.rs  xml.rs  yaml.rs  zip.rs
