[package]
name = "markitdown"
version = "0.2.0"
edition = "2021"
description = "A Rust library designed to facilitate the conversion of various document formats into markdown text with ObjectStore and LLM support."
repository = "https://github.com/TM9657/markitdown-rs"
license = "MIT"

[dependencies]
calamine = { version = "0.30", default-features = false, features = ["dates"] }
clap = { version = "4.5.27", features = ["derive"] }
csv = "1.3.1"
html2md = "0.2.15"
kamadak-exif = "0.6.1"
infer = "0.19"
mime_guess = "2.0.5"
docx-rust = "0.1.10"
pdf-extract = "0.10.0"
regex = "1.12.2"
serde = { version = "1.0.219", features = ["derive", "rc"] }
quick-xml = "0.38.3"
zip = { version = "6.0.0", default-features = false, features = [
  "deflate",
  "aes-crypto",
  "time",
] }
serde_json = "1.0.134"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
base64 = "0.22.1"
rig-core = "0.24.0"
feed-rs = "2.3.1"
tempfile = "3.20.0"
object_store = { version = "0.11.1", features = ["gcp", "aws", "azure", "serde", "serde_json", "cloud"] }
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"
url = "2.5"
thiserror = "2.0"
hayro = {version="0.4.0", features = ["embed-fonts"]}